--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -18,7 +18,7 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703099.md#1" target="_blank">台媒大师链北京插旗 学者：新型数位统战</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703099.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d616f32af30c66155e1e6d0b889cae4d-150x120.jpg" align ="left"></a>新网路内容平台“大师链”近日宣布将落地北京，创下台湾媒体在北京插旗的首例。淡江大学整合战略科技中心执行长苏紫云分析，大师链可能是中共新型态的“数位统战”，以虚拟货币“大师币”作为诱因，逐步限缩加入平台的文章、影音创作者的言论方向，甚至会在相关App中植入附加程式进行金流监控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701694.md#1" target="_blank">全球最适合居住及就业城市 台北重登冠军</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a352c5ee0e1838818d6848c55923d60a-150x120.jpg" align ="left"></a>根据旅外人士交流网站InterNations调查，台湾首都台北荣登2019年全球最适合居住和就业的城市排行榜榜首，睽违2年重回冠军宝座。其中，成为冠军最重要的原因是旅外人士认为“台北整体生活品质高”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11702627.md#1" target="_blank">高以翔猝逝 浙江卫视《追我吧》永久停播</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11702627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020718061487-150x120.jpg" align ="left"></a>今天（12月5日），有消息称，浙江卫视将永久停播《追我吧》节目。此前台湾艺人高以翔在录制此节目时不幸猝逝。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712332.md#1" target="_blank">每日三退声明精选（2019/12/09）</a><br></h3>我是建筑商，今年承包了一个政府工程，在外县施工。在承揽工程及施工过程中亲身体会中共的腐败。管工程的要钱，管品质的勒索，管安全的勒索。。。怎么反腐都照贪不误。真是百炼成贪的邪教。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701699.md#1" target="_blank">百度又曝丑闻 收钱推广假药 逾五千人受骗</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9e0d556bcec963c0587ddf34dbb3db62-600x400-150x120.jpg" align ="left"></a>由李彦宏掌舵的大陆搜索引擎百度丑闻不断。近日百度再卷入推广假药案，该案案发至今全国共有5000多人受骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710960.md#1" target="_blank">台最高检：境外资金介入总统大选 全来自中国</a><br></h3>距离2020年总统、立法委员大选倒数32天，针对大选查贿制暴执行成果，其中值得注意的是境外资金介选部分，据最高检察署统计，介选的境外资金多来自中国，且针对总统部分是100%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11709969.md#1" target="_blank">女子谎称误吞奶茶吸管 医生取出30厘米催吐管</a><br></h3>日前，22岁的广州女子小卢前往医院就诊，说自己喝奶茶时不小心将吸管吞入食道。医生检查发现，所谓的“吸管”竟宽约19厘米、长约30厘米。小卢才说，她吞进去的是网购的催吐管。医生告诫，盲目插管对内脏的伤害非常大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11709669.md#1" target="_blank">被曝性侵的上海财大副教授 辞三公司董事</a><br></h3>被曝性侵女硕士生的上海财经大学副教授钱逢胜，两天内辞去三间上市公司独立董事的职务，原因均为“因个人原因”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:30 PM							</td></tr>
