--- a/gb/ncid277_3.md
+++ b/gb/ncid277_3.md
@@ -1,4 +1,17 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11701016.md#1" target="_blank">美为何点名要制裁《大公报》《文汇报》</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11701016.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190819050754100311-1-150x120.jpg" align ="left"></a>美国通过的《香港人权与民主法案》中直接点名制裁两家亲共港媒《大公报》和《文汇报》，随后这两家媒体（同属大公文汇传媒集团）发出捍卫“新闻自由”的“严正声明”，被网民讥讽红媒双重标准——在被制裁时大喊“新闻自由”，在剥夺别人“新闻自由”时却理直气壮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716717.md#1" target="_blank">高以翔代表作插曲主唱辞世 范玮琪发文悼念</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716717.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/yixianggao-150x120.jpg" align ="left"></a>台湾艺人高以翔11月27日凌晨在大陆录制浙江卫视综艺节目《追我吧》时猝逝，当亲友与粉丝还沉浸在一片悲痛之中时，12月10日晚又惊传噩耗，高以翔三年前主演的《遇见王沥川》剧集中插曲的演唱者——61岁的玛丽?芙瑞德克森（Marie Fredriksson）病逝，让作为高以翔的好友和玛丽?芙瑞德克森粉丝的台湾歌手范玮琪（范范）悲恸泪诉：“太多伤心的事。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716783.md#1" target="_blank">《禁蒙面法》失效 梁家杰：北京没有选择余地</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190926043654100484-150x120.jpg" align ="left"></a>香港高等法院上诉庭周二（12月10日）拒绝就《禁蒙面法》违宪案批出暂缓执行令，导致该法暂时失效。香港资深大律师梁家杰表示，对此判决不感到意外，北京最好什么也不要说，相信习近平态度会软化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716613.md#1" target="_blank">美前官员：中共陷困境 川普不需要贸易协议</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716613.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1180494134-1-150x120.jpg" align ="left"></a>美国前国务院资深官员周三（12月11日）撰文说，总统川普（特朗普）不需要现在达成协议、给陷入困境中国共产党续命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 6:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716484.md#1" target="_blank">孔子学院再遭挫 比利时荷兰语大学终止合作</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716484.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VUB_campus_Etterbeek-150x120.jpg" align ="left"></a>比利时荷语“布鲁塞尔自由大学”（VUB）周二（12月10日）决定，自2020年6月起，将不再延长与孔子学院的合作。VUB认为，自由研究处于风险中，此外，孔子学院中方院长被比利时安全部指控从事间谍活动，也促使VUB取消合作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716317.md#1" target="_blank">传国家京剧院副院长袁慧琴交辞职申请</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716317.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-7-150x120.jpg" align ="left"></a>知名京剧演员姜亦珊去世后，微信圈疯传国家京剧院副院长袁慧琴已经提交请辞申请，并主动投案表示愿意接受调查。但袁仍然参加了国家大剧院近日的两场活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716284.md#1" target="_blank">新闻自由恶化 中共今年监禁记者数全球第一</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716284.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1312231117082320-150x120.jpg" align ="left"></a>位于纽约的保护记者委员会（The Committee to Protect Journalists）周三（12月11日）表示，中国是2019年全球监禁新闻工作者人数最多的国家，关押了至少48名记者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715995.md#1" target="_blank">绿党民调：近7成台湾民众对中共反感</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/e44195dcfba381b7b1b223dec4e7e74caa-150x120.jpg" align ="left"></a>2020总统、立委选举进入倒数1个月，绿党11日公布最新民调，民进党总统蔡英文以48.9%支持度，大幅度领先国民党总统候选人韩国瑜的19.7%、亲民党宋楚瑜的8.3%；至于对中共的好感度方面，民调显示反感者高达近七成，有好感者则不到一成，显示民众不认同与中共靠拢。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715991.md#1" target="_blank">中共否认介入台大选 陆委会：事实胜于雄辩</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-12-112.44-150x120.jpg" align ="left"></a>国际多次提醒中共意图干预台湾大选，近期北京再抛“对台26项措施”，国台办却称“我们从来都不介入台湾地区选举”。对此，陆委会11日表示，事实胜于雄辩，“26条措施”就是赤裸裸介入台湾选举。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716268.md#1" target="_blank">确保稀土供应 美军采取自二战以来紧急行动</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Rareearthoxides-1-600x390-150x120.jpg" align ="left"></a>路透社看到的一份政府文件显示，美军计划为建造稀土加工设施提供资金，这是华盛顿紧急行动的部分举措，目标是确保可用于制造军事武器和电子产品的稀土的国内供应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713539.md#1" target="_blank">中共介选台湾3管道 美学者：黑道 台商 宗教</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713539.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/02d2bed17e7ca46e084a6671f9d48970-150x120.jpg" align ="left"></a>2020总统选举进入倒数1个月，中共介入台湾选举的问题一直备受各界关注。“美国企业研究所”客座研究员马明汉（Michael Mazza）10日表示，从中长期来看，无论哪个政党执政，两岸关系都会走向负面发展，目前蔡政府很可能会连任，预料中共可能会加大对台湾的军事、经济压力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716194.md#1" target="_blank">P2P倒了领导先跑 中国金融反腐藏特权</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716194.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/0cfc7f1dfaca21a50d3e63edb3e4984a-150x120.jpg" align ="left"></a>中国官员腐败花招多，并反映热门时事。中共中央纪检委10日发布公告，金融领域官员除了收受贿赂，还利用职务之便，在清理网贷（P2P借贷）等案件上“特权挽损”，让自己先抽身。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715875.md#1" target="_blank">解除民主派议员陈淑庄职务动议被否决</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-06_11-46-05-150x120.jpg" align ="left"></a>香港区议会选举后，建制派对民主派“动手”。今天（12月11日），建制派立法会议员在大会上动议，解除民主派陈淑庄、邵家臻的议员职务。但因建制派只有40席，投票时，未能达到三分之二的要求，故此动议被否决。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715977.md#1" target="_blank">台外长：若中共武力介入香港 台湾愿助港人</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715977.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MH2CN-150x120.jpg" align ="left"></a>台湾外交部长吴钊燮周二（12月10日）表示，台湾支持香港人民的自由与民主，如果中共以武力介入香港，镇压抗议者，台湾将会与国际社会一道帮助港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714980.md#1" target="_blank">大陆司法界两贪官被逮捕 一人与周永康有关系</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714980.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1511012105372382-600x400-1-150x120.jpg" align ="left"></a>12月11日，中共最高检察院发布消息称，中共吉林省检察院前党组书记、检察长杨克勤，海南省高级法院前党组成员、副院长张家慧均以涉嫌受贿罪被逮捕，案子均被移送起诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 8:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715447.md#1" target="_blank">央视导弹画面涉嫌造假 遭军方内部人士拆穿</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715447.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-54984486-150x120.jpg" align ="left"></a>中共喉舌中央电视台于12月8日的新闻联播中播放了导弹发射的画面，声称“火箭军某新型常规导弹形成全天候作战能力”，但有中共军方内部人士提出多个疑点说，央视的画面有造假之嫌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:06 PM							</td></tr>
@@ -21,21 +34,6 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714293.md#1" target="_blank">中共空军0:4败于泰军 空军大校演讲泄真相</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6d4862f1955d324ee753fe211f5d1b64-150x120.jpg" align ="left"></a>号称全球军事实力第三的中共国家，其真实军事实力到底如何呢？中共空军大校在一次内部报告中揭露了真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:09 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714373.md#1" target="_blank">【热点互动】美反对世行对中贷款 释重大信号</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714373.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15df1ccfc6055bd6_ttl7dayKOH_842bd21c8be02656-150x120.jpg" align ="left"></a>川普总统发推批评世界银行通过今后五年对中国的低息贷款，并称中国（中共）很有钱；如果没有，“他们就造钱”。美财政部长也表示已经对该计划提出反对。外媒评论中美经济竞争正蔓延到多边机构。为何世行对中贷款引发争议？此事会引发什么样的国际效应？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714338.md#1" target="_blank">抹黑黄之锋持美国绿卡 漏洞百出沦笑柄</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714338.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7bdd9c08246b807c40a06136283dfcf4-150x120.jpg" align ="left"></a>10日，香港众志秘书长黄之锋在脸书贴出一张疑似中共五毛伪造的黄之锋美国“绿卡”，不但名字写错，拼音也用普通话的拼法，沦为笑柄。他还调侃“五毛和小粉红们要注意喔”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713799.md#1" target="_blank">【新闻看点】从反送中到驱逐共党 港人猛醒</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713799.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1909200714411501-600x399-1-800x450-150x120.jpg" align ="left"></a>12月9日，香港人的街头抗争刚好满6个月。从6月初夏走到12月寒冬，香港人的抗争发生了质的变化，从“反送中”演变成了驱逐共党的“反极权”民主抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 4:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714155.md#1" target="_blank">美推迟15日新关税？库德洛：仍可能加征</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714155.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/820b1d8b0e06c5ed67af13daddf85dd5-150x120.jpg" align ="left"></a>美媒12月10日称，美中双方官员表示，贸易谈判代表正在为推迟将于12月15日生效的美对华新一轮关税铺路。白宫首席经济顾问库德洛（Larry Kudlow）当天反驳说，美方仍未排除15日加税的可能性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11711294.md#1" target="_blank">中港警察头目会面 官媒报导不同调的背后</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11711294.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191111100311100615-150x120.jpg" align ="left"></a>中共公安部部长赵克志日前会见了香港警队新任警务处长时，公安部旗下的官网予以详细报导，但中共两大央媒删除了赵克志的很多敏感讲话。有分析认为，央媒删除的那些话有泄漏中共高层秘密之嫌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714086.md#1" target="_blank">剑指中俄 美两党国防预算达共识 建太空部队</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1170990853-150x120.jpg" align ="left"></a>周一（12月9日）晚间，美国参众两院的相关委员会通过了《 2020财政年度国防授权法》（DNAA 2020），批准了7380亿美元的国防预算，让美国准备应对来自中共和俄罗斯的威胁，此外美国太空部队将正式成为美国第六个军事部门。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank">美国安顾问：使用华为 即西方信息安全末日</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1177748633-150x120.jpg" align ="left"></a>美国川普（特朗普）的国家安全顾问奥布赖恩（Robert O’Brien）警告说，如果西方世界让华为参与建立5G网络，那就是民主世界的信息安全“世界末日”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank">【翻墙必看】中共残杀“变节”间谍及家人</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/08/408171957939-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713494.md#1" target="_blank">中方加速买大豆 川普说贸易谈判进展好</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713494.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周一在白宫表示，美中的贸易谈判进展良好。中方当天也表明了达成协议的愿望，并与此同时加大了购买美国大豆的力度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713179.md#1" target="_blank">学者：慎防中共暗杀台总统候选人 制造混乱</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1183354844-150x120.jpg" align ="left"></a>随着台湾总统大选的逼近，外界日益关注中共对这场选举的干预。日本国际政治学者藤井严喜在12月8日便提出警告，台湾应当慎防中共暗杀总统候选人，迫使选举结果无效，并制造社会大混乱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 6:19 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712671.md#1" target="_blank">中国职篮法籍球员未看五星旗挨罚 网民吐槽</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712671.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-141607429-150x120.jpg" align ="left"></a>中国男子篮球职业联赛（CBA）一名法籍球员在比赛前的奏唱国歌仪式中，因为没有向五星旗行注目礼而被罚款人民币1万元。对此，网民纷纷留言加以吐槽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 3:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11712035.md#1" target="_blank">美中国专家出书 揭秘中共特工情报系统（上）</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11712035.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7c268796d7d315f3579f9ab201870bfc-150x120.jpg" align ="left"></a>最近中共特工王立强投诚澳洲，引发外界对中共情报系统在海外广泛活动的关注。美国国会及行政当局中国委员会（CECC）办公室副主任彼得?马蒂斯（Peter Mattis，中文名孟沛德）和马特?巴西（Matt Brazil）近日出书，揭露中共情报工作的历史、现状及手段。
-
-12月5日，美国战略与国际研究中心（Center for Strategic and In.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712431.md#1" target="_blank">美国防法案两党达共识 瞄准中车、大疆和华为</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712431.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/8ed5a47975ad438961f79f33b7d67f43-150x120.jpg" align ="left"></a>美国国会希望通过必须通过的国防授权法案，来阻止中国产巴士、列车车厢和大疆无人机进入美国。法案还涉及帮助加强台湾抵御中共的内容，以及针对华为的内容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:35 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712274.md#1" target="_blank">传香港四高官圣诞节前后被撤换</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712274.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080350552188-600x400-1-150x120.jpg" align ="left"></a>有港媒报导指，北京再考虑港府重组问责班子想法，要拿下四名民望低的官员。消息指，有可能在圣诞假前后会做出上述决定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 12:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714983.md#1" target="_blank">天津街道书记贪3亿囚18年 每天躺钱上睡觉</a><br></h3>上月25日，天津市滨海新区寨上街道前工委书记陈玉慧，因贪污、受贿等多罪，被判处有期徒刑18年、罚款140万元人民币（下同）。其案涉及金额高达3.17亿元。陈玉慧被指每天躺在钱上睡觉，向他行贿的恶势力头目因其太贪而绝交。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 4:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712789.md#1" target="_blank">中共非法关押律师等 美驻华大使发声明抨击</a><br></h3>12月10日是“国际人权日”。中共虽然签署了《世界人权宣言》，但从来未遵守相关承诺，中国人权状况每况愈下。美国驻华大使布兰斯塔德发声明抨击中共。而中共在广州举办的“世界律师大会”，更是严禁大陆维权律师到场。中国失踪律师的家属表示，对中共开这个大会感到“震惊和可笑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/ncid277_3.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/ncid277_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_3.htm">http://www.epochtimes.com/gb/ncid277_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
