--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706297.md#1" target="_blank">姐姐因病离世 原来真是回天界享福去了</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706297.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/123-150x120.jpg" align ="left"></a>我姐姐1971年出生的。从小她就体弱，后来就得了白血病。我爸着急啊，他特别相信算命的，就找了一高人给姐看相，那人一见我姐就说，这女孩在天上是侍奉菩萨的小童，做错事给打下来了。她不属于我们凡间，下来就是要吃苦赎罪的，时间到了还得回天界啊。我爸问他，“什么时间回去啊？”那高人说，她在凡间也就待22年，然后就回天界享福了。他.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706278.md#1" target="_blank">揭开白蛇传的爱情面纱：法海原为除妖高僧</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706278.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Scenic_Attractions_of_West_Lake_30-150x120.jpg" align ="left"></a>建于东晋的镇江泽心寺，唐时始称金山寺，后成为临济宗传承道场，被奉为佛教禅宗经典名寺。金山寺素以“高僧降蛇”为其独特的寺庙文化而名闻遐迩。提到“高僧降蛇”，就不得不说到金山寺的“开山裴祖”——高僧法海，亦即后世诸多版本白蛇传中法海和尚的原型。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718913.md#1" target="_blank">作文选登：面对未来，我需具备的能力</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718913.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/414629_medium-150x120.jpg" align ="left"></a>当我们迈入人生的不同阶段时，都会遇到各式各样的挑战，我们应该具备多元的能力，让未来的道路走得明亮、灿烂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank">得天扶佑乾隆帝书法艺术 透露什么内心世界？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/88300293_p-150x120.jpg" align ="left"></a>乾隆皇帝在书画上的题识，展露了什么精神气息？一代盛世得天福祐明君对应书画的态度和品味，展露他怎样的内心世界？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:36 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank">得天扶佑乾隆帝书法艺术 透露怎样的内心世界？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/88300293_p-150x120.jpg" align ="left"></a>乾隆皇帝在书画上的题识，展露了什么精神气息？一代盛世得天福祐明君对应书画的态度和品味，展露他怎样的内心世界？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/6/22/n3899772.md#1" target="_blank">诈骗枉法升官 惶惧遭报惨死</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/6/22/n3899772.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/shutterstock_1029639910-150x120.jpg" align ="left"></a>县令发现从这里走水路，可以直通县城。但是，乘船的客商，却总要在这里卸货，再雇用脚夫，从陆路把货物运往县城............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717138.md#1" target="_blank">凭蘑菇打开世界市场 秘诀：失败是财富绝不放弃</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717138.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/37c1339eff365b8ee9fe65d06938a073-150x120.jpg" align ="left"></a>仅凭蘑菇，能成为世界级的CEO吗？Green Co.Ltd朴熙珠代表在蘑菇上倾注了一切，建立公司37年之际，已经出口到四十多个国家，每年销售额达到1000亿韩元。韩国国内市场上流通的蘑菇，其中一半是张代表公司的产品。韩国国内八个工厂每天生产的蘑菇量高达八吨，另外还设有海外工厂，仅中国、英国、德国三国就多达六处。生产于庆.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717068.md#1" target="_blank">风行水上，之于新竹</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/180227012254100093-150x120.jpg" align ="left"></a>离别是为了另一次的重逢。人的一生，每个经历过的城市都是相通的，每个走过的脚印，都是相连的，它一步步带领我到今天，成就今天的我。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:10 AM			</td></tr>
